# AI-Infused-SRE-Agent

./: .azure-pg-creds  .dockerignore  .editorconfig  .gitignore  Makefile  OFFICE-LAPTOP-SETUP.md  README.md  SETUP.md  STORY.md  docker-compose.local-dev.yml  seed_data.sql  seed_data_events.sql
services/agent/: .importlinter  Dockerfile  README.md  alembic.ini  pyproject.toml
services/agent/src/sre_agent/: composition_root.py
services/agent/src/sre_agent/application/agent_graph/: __init__.py  graph.py  nodes.py  state.py
services/agent/src/sre_agent/application/saga/: __init__.py  approval_saga.py  digest_scheduler.py  insights_monitor.py  jira_status_poller.py  sla_monitor.py
services/agent/src/sre_agent/application/use_cases/: __init__.py  answer_query.py  close_incident_with_human_resolution.py  create_incident_ticket.py  detect_incident.py  diagnose_incident.py  execute_fix.py  extract_lessons_learnt.py  find_similar_incidents.py  gather_evidence.py  generate_postmortem.py  generate_weekly_digest.py  log_insights.py  onboard_app.py  parse_chat_intent.py  propose_remediation.py  request_approval.py  resolve_approval.py  run_advisory_conversation.py  run_on_demand_investigation.py  start_sla_trackers.py  triage_incident.py  verify_resolution.py
services/agent/src/sre_agent/common/: config.py  logging.py  metrics.py  tracing.py
services/agent/src/sre_agent/domain/entities/: __init__.py  app.py  approval.py  incident.py  lesson_learnt.py  postmortem.py  project.py  service.py  sla_tracker.py
services/agent/src/sre_agent/domain/events/: __init__.py  approval_events.py  base.py  incident_events.py
services/agent/src/sre_agent/domain/exceptions/: __init__.py
services/agent/src/sre_agent/domain/ports/: __init__.py  embeddings.py  k8s.py  knowledge.py  lessons.py  llm.py  logs.py  metrics.py  notification.py  registry.py  repositories.py  sla.py  ticketing.py
services/agent/src/sre_agent/domain/value_objects/: __init__.py  action_class.py  blast_radius.py  confidence.py  identifiers.py  log_line.py  metrics.py  severity.py  time_window.py
services/agent/src/sre_agent/infrastructure/embeddings/: __init__.py  sentence_transformers_adapter.py
services/agent/src/sre_agent/infrastructure/grafana/: __init__.py  grafana_adapter.py
services/agent/src/sre_agent/infrastructure/k8s/: __init__.py  kubernetes_adapter.py
services/agent/src/sre_agent/infrastructure/knowledge/: __init__.py  pgvector_adapter.py  pgvector_lessons_adapter.py  qdrant_adapter.py  qdrant_lessons_adapter.py  yaml_catalog_adapter.py
services/agent/src/sre_agent/infrastructure/llm/: __init__.py  openrouter_adapter.py
services/agent/src/sre_agent/infrastructure/logs/: __init__.py  elasticsearch_adapter.py  loki_adapter.py
services/agent/src/sre_agent/infrastructure/messaging/: __init__.py  adaptive_cards.py  teams_adapter.py
services/agent/src/sre_agent/infrastructure/metrics/: __init__.py  azure_monitor_adapter.py  composite_adapter.py  prometheus_adapter.py
services/agent/src/sre_agent/infrastructure/ticketing/: __init__.py  jira_adapter.py  log_only_email_adapter.py  log_only_jira_adapter.py  smtp_email_adapter.py
services/agent/src/sre_agent/interface/bot/: __init__.py  bot_handler.py
services/agent/src/sre_agent/interface/rest/: app.py  auth.py  dependencies.py
services/agent/src/sre_agent/interface/rest/routers/: __init__.py  (+21 more)
services/agent/tests/fixtures/: fake_uow.py
services/agent/tests/integration/: test_postgres_repo.py
services/agent/tests/unit/application/: test_detect_incident.py  test_resolve_approval.py
services/agent/tests/unit/domain/: test_approval.py  test_incident.py  test_value_objects.py
(+170 files in other folders)
