[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sre-agent"
version = "0.1.0"
description = "AI-powered SRE agent with HIL approval, RAG-backed runbooks, and Teams bot"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.6.0",

    # LLM / Agent
    "openai==1.54.3",
    "langgraph==0.2.45",
    "langgraph-checkpoint-postgres==2.0.1",
    "langchain-core==0.3.15",
    "langchain-openai==0.2.5",
    "psycopg[binary,pool]==3.2.3",

    # Embeddings (CPU)
    "sentence-transformers==3.2.1",

    # Vector DB
    "pgvector==0.3.6",  # backend: pgvector on the same Postgres as relational data

    # Persistence
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "redis==5.1.1",

    # Kubernetes
    "kubernetes==31.0.0",
    "kubernetes-asyncio==31.1.1",

    # Metrics / Observability
    "prometheus-client==0.21.0",
    "prometheus-api-client==0.5.5",
    "structlog==24.4.0",
    "opentelemetry-api==1.28.0",
    "opentelemetry-sdk==1.28.0",
    "opentelemetry-instrumentation-fastapi==0.49b0",
    "opentelemetry-exporter-otlp==1.28.0",

    # Teams bot (botbuilder-integration-aiohttp pins aiohttp==3.9.5)
    "botbuilder-core==4.16.0",
    "botbuilder-schema==4.16.0",
    "botbuilder-integration-aiohttp==4.16.0",

    # Reliability
    "tenacity==9.0.0",
    "pybreaker==1.2.0",

    # Utilities
    "httpx==0.27.2",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "dependency-injector==4.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "testcontainers[postgres,qdrant]==4.8.2",
    "ruff==0.7.2",
    "mypy==1.13.0",
    "types-pyyaml==6.0.12.20240917",
    "import-linter==2.1",
    "faker==30.8.1",
    "freezegun==1.5.1",
    "respx==0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sre_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "PTH",           # pathlib
    "TID",           # tidy-imports
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "qdrant_client.*",
    "kubernetes.*",
    "kubernetes_asyncio.*",
    "prometheus_api_client.*",
    "botbuilder.*",
    "dependency_injector.*",
    "pybreaker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast unit tests, no external deps",
    "integration: integration tests, need testcontainers",
    "e2e: end-to-end tests, need kind cluster",
]
